--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?3hyb64');
-	src:url('fonts/icomoon.eot?#iefix3hyb64') format('embedded-opentype'),
-		url('fonts/icomoon.woff?3hyb64') format('woff'),
-		url('fonts/icomoon.ttf?3hyb64') format('truetype'),
-		url('fonts/icomoon.svg?3hyb64#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?3hyb64');
+	src:url('../fonts/icomoon.eot?#iefix3hyb64') format('embedded-opentype'),
+		url('../fonts/icomoon.woff?3hyb64') format('woff'),
+		url('../fonts/icomoon.ttf?3hyb64') format('truetype'),
+		url('../fonts/icomoon.svg?3hyb64#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
